src/test/deca/context/invalid/Objet/Selection-ProtectedField.deca
// Description:
//      Program abnormally trying to access a protected field
//
// Result:
//      Contextual Error
//      Line 18: (RULE 3.66) <Accessing invisible field> 
//
// History:
//      Created in 17/1/2022

class A {
    protected int x;
}

class X {
    void m() {
        A a = new A();
        println(a.x) ; // Contextual error : x is protected
    }
}
